--- a/render.html
+++ b/render.html
@@ -3,7 +3,9 @@
 <h2>Programmatic generation of SVG using Python</h2>
 <p>The following graphic is a screenshot of SVG created dynamically from a CSV data source using Python and an SVG library.  This was for an unsolicited proof of concept, for a prospective client, and is not the final version but a demonstration of what's possible in a limited amount of development time.</p>
 
-<p>The problem: the firm uses manual tools like Illustrator to create reports that contain data, logos and images, and they have to do this frequently. This is a very time-consuming and tedious process.  I demonstrated a way to do this programmatically in seconds from a CSV file and a directory of images.  The SVG would then be imported into a publishing tool.</p>
+<p>The problem: the firm uses manual tools like Illustrator to create reports that contain data, logos and images, layed out in a precise manner, and they have to do this frequently. This is a very time-consuming and tedious process.</p>
+
+<p>The proposed solution: I demonstrated a way to do this programmatically in seconds from a CSV file and a directory of images.  The SVG would then be imported into a publishing tool.</p>
 
 <p>
 <a href="https://github.com/bethesdamd/d_and_a_svg/blob/master/svg_logos_screenshot.png">See a screenshot of the final SVG</a>
